# SOMPY

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: AirFlights_hexagonal_grid.ipynb  california_housing_rectangular_grid.ipynb
sompackage/: __init__.py  sompackage.py
sompackage/visualization/: bmuhits.py  hitmap.py  mapview.py
src/sompy/: __init__.py  codebook.py  neighborhood.py  normalization.py  sompy.py
src/sompy/visualization/: bmuhits.py  dotmap.py  histogram.py  hitmap.py  mapview.py  plot_tools.py  plot_tools2.py  umatrix.py  view.py
